# antinatalism.ai

./: pyproject.toml
src/: app.py  chunks.pkl  chunks.xlsx  core_functions.py  prompt.py  retrieve_from_index.py  vector_db_interface.py
src/one_time/: chunks_to_embeddings.py  faiss_index_generation.py  pdf_to_chunks.py  text_embeddings.py
